pagina home feita

--- a/src/styles/abstract/_reset.scss
+++ b/src/styles/abstract/_reset.scss
@@ -6,7 +6,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -16,6 +17,21 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Remove margens padrão de textos */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+figure,
+blockquote {
+  margin: 0;
+  padding: 0;
+}
+
+/* Elementos de mídia */
 img,
 picture,
 video,
@@ -25,6 +41,7 @@ svg {
   max-width: 100%;
 }
 
+/* Inputs */
 input,
 button,
 textarea,
@@ -36,15 +53,21 @@ select {
   outline: none;
 }
 
+textarea {
+  resize: vertical; // evita bagunça no layout
+}
+
 button {
   cursor: pointer;
 }
 
+/* Links */
 a {
   text-decoration: none;
   color: inherit;
 }
 
+/* Listas */
 ul,
 ol {
   padding: 0;
@@ -52,7 +75,19 @@ ol {
   list-style: none;
 }
 
+/* Tabelas */
 table {
   border-collapse: collapse;
   width: 100%;
+}
+
+/* Base invisível pros elementos sem display padrão consistente */
+article,
+aside,
+footer,
+header,
+nav,
+section,
+main {
+  display: block;
 }
