--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,10 @@
 @use "./abstract/variaveis";
 @use "./abstract/mixins";
+@use "./abstract/reset";
+
+@use "/src/styles/layouts/home";
+
+@use "/src/styles/components/card";
+@use "/src/styles/components/tag";
+
+@import url("https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&display=swap");
