--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,8 @@
 @use "./abstract/reset";
 
 @use "/src/styles/layouts/home";
+@use "/src/styles/layouts/projects";
+@use "/src/styles/layouts/services";
 
 @use "/src/styles/components/card";
 @use "/src/styles/components/tag";
