--- a/src/styles/layouts/_home.scss
+++ b/src/styles/layouts/_home.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 112px 163px 57px 112px;
+  padding: 112px 163px 57px 163px;
   &-avatar {
     width: 120px;
     margin-bottom: 56px;
@@ -41,5 +41,8 @@
     display: flex;
     gap: 16px;
     margin: 80px 0;
+  }
+  .caret-double-down {
+    width: 23px;
   }
 }
