contact layout done

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @use "/src/styles/layouts/home";
 @use "/src/styles/layouts/projects";
 @use "/src/styles/layouts/services";
+@use "/src/styles/layouts/contact";
 
 @use "/src/styles/components/card";
 @use "/src/styles/components/tag";
